--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "jose": "^6.0.12",
     "lucide-react": "^0.539.0",
     "next": "15.4.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "react-markdown-editor-lite": "^1.3.4",
+    "react-quill-new": "^3.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
